# Docker_Flask

./: .dockerignore  .gitignore  README.md  api.py  pyproject.toml
.ipynb_checkpoints/: api-checkpoint.py
flask_app/: requirements.txt
