[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = "Template of Flask API"
authors = ["Aureliano Sancho <sanchobuendia@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_app"}]
repository = "https://github.com/sanchobuendia/Docker_Flask.git"


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Flask = "2.0.2"
pandas = '1.4.3'
numpy = '1.23.1'
requests = "2.26.0"
gunicorn = "20.1.0"
yfinance = '0.1.70'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# poetry shell
# poetry install
# poetry run python api.py